tests/baselines/reference/zeroWidthNonJoinerES3.errors.txt
tests/cases/compiler/zeroWidthNonJoinerES3.ts(2,17): error TS1127: Invalid character.


==== tests/cases/compiler/zeroWidthNonJoinerES3.ts (1 errors) ====
    // identifier\u200C‌WithZWNJ
    const identifier‌WithZWNJ = "";
                    
!!! error TS1127: Invalid character.